[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cross_evaluation"
version = "0.1.0"
description = "Federated Learning cross evaluation with Tensorflow"
authors = ["The Flower Authors <hello@flower.dev>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
flwr = { extras = ["simulation"], version = "^1.0.0" }
tensorflow-cpu = "^2.9.1"
